refactor：代码格式化
(cherry picked from commit 3c44bee08960f88ccc907e9ff95a4bb095b66a57)